<resources>
    <string name="app_name">Digital Tourism</string>
    <string name="b_welcome_to_safari_n_lifestyle_b"><b>Welcome to safari \n lifestyle</b></string>
    <string name="app_logo">App Logo</string>
    <string name="username_label">Username</string>
    <string name="password_label">Enter password</string>
    <string name="forgot_password_txt">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create Your Account !</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="connect_with">connect with</string>
    <string name="google">Google</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="facebook">Facebook</string>
    <string name="google_icon">google icon</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="discover">Discover</string>
    <string name="shop">Shop</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="title_login">login</string>
    <string name="search">search</string>
    <string name="message">message</string>
    <string name="bag">bag</string>
    <string name="explore_safari_txt">EXPLORE VIRTUAL SAFARI</string>
    <string name="explore_virtual_safari_small">Explore Virtual Safari</string>
    <string name="open_kenya_txt">OPEN KENYAN BIBLE</string>
    <string name="slider_bg_alt">slider_image_alt</string>
    <string name="personal_trips">Personal Trips</string>
    <string name="learnkenya">Learn Kenya</string>
    <string name="title_dashboard">dashboard</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="view_calender">View Calender</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="open_kenyan_bible">OPEN KENYAN BIBLE</string>
    <string name="mombasa">Mombasa</string>
    <string name="meru">Meru</string>
    <string name="maasai_mara">Maasai Mara</string>
    <string name="samburu">Samburu</string>
    <string name="number_of_adults">Number of Adults</string>
    <string name="number_of_kids">Number of Kids</string>
    <string name="create_a_4_digit_pin">Create a 4-digit pin</string>
    <string name="create_a_new_pin_for_your_chaza_wallet">Create a new pin for your chaza wallet</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="continuetxt">Continue</string>
    <string name="recommended_for_you">Recommended For you</string>
    <string name="by_tanya_hall">By Tanya Hall</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="ideas_influence_and_income">IDEAS,INFLUENCE AND INCOME</string>
    <string name="ksh_112_800_00">KSH 112,800.00</string>
    <string name="make_payments">MAKE PAYMENTS</string>
    <string name="top_up_wallet">TOP UP WALLET</string>
    <string name="savings_account">Savings Account</string>
    <string name="chaza_card">chaza card</string>
    <string name="statements">Statements</string>
    <string name="plan_your_own_trips_and_get_professional_n_guides_and_tips">Plan your own trips and get \n Professional  guides and tips</string>
    <string name="maasai_mara_national_park">Maasai Mara National Park</string>
    <string name="ksh_2_500">KSH 2,500</string>
    <string name="history">History</string>
    <string name="get_quotation">Get Quotation</string>
    <string name="_9_posts">9 Posts</string>
    <string name="_24_explorers">24 Explorers</string>
    <string name="_1_badge">1 Badge</string>
    <string name="send_invite_code">Send invite code</string>
    <string name="redeem_points">Redeem points</string>
    <string name="cycyter256jk">Cycyter256Jk</string>
    <string name="_2_989">2,989</string>
    <string name="page1_12">page 1/12</string>
    <string name="the_beautiful_people_of_kenya">The Beautiful people of Kenya</string>
    <string name="see_on_map">SEE ON MAP</string>
    <string name="mara_camp">Mara Camp</string>
    <string name="gallery">Gallery</string>
    <string name="choose_your_preferred_payment_option">Choose your preferred payment Option</string>
    <string name="kes_12_800_00">KES 12,800.00</string>
    <string name="savings_balance">Savings balance</string>
    <string name="plantrip">PLAN FOR TRIP</string>
    <string name="viewfullmap">VIEW FULL MAP</string>
    <string name="shop_item_image">shop Item image</string>
    <string name="_1_4">1/4</string>
    <string name="share_icon">share icon</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="description">Description</string>
    <string name="ratingbar">rating bar</string>
    <string name="_4_2">4.2</string>
    <string name="related_products">Related products</string>
    <string name="checkout">CHECKOUT</string>
    <string name="already_added_to_bag">Already Added to Bag</string>
    <string name="but_i_must_explain_to_you_how_all_this_mistaken_idea_of_denouncing_pleasure_and_praising_pain_was_born_and_i_will_give_you_a_complete_account_of_the_system_and_expound_the_actual_teachings_of_the_great_explorer_of_the_truth_the_master_builder_of_human_happiness_no_one_rejects_dislikes_or_avoids_pleasure_itself_because_it_is_pleasure_but_because_those_who_do_not_know_how_to_pursue_pleasure_rationally_encounter_consequences_that_are_extremely_painful_nor_again_is_there_anyone_who_loves_or_pursues_or_desires_to_obtain_pain_of_itself_because_it_is_pain_but_because_occasionally_circumstances_occur_in_which_toil_and_pain_can_procure_him_some_great_pleasure_to_take_a_trivial_example_which_of_us_ever_undertakes_laborious">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious.</string>
    <string name="user_name">Alex Tafari</string>
    <string name="occupation">Traveller</string>
    <string name="badge_icon">badge icon</string>
    <string name="messages">MESSAGES</string>
    <string name="community_icon">community icon</string>
    <string name="invitation_code">Invitation code</string>
    <string name="safari_points">Safari Points</string>
    <string name="back_icon">back icon</string>
    <string name="welcomebacktxt">Welcome back Alex!</string>
    <string name="add_icon">add icon</string>
    <string name="car_icon">car icon</string>
    <string name="mara_serena">MARA SERENA</string>
    <string name="date">12/12/2014</string>
    <string name="proceed">PROCEED</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="choose_country">Choose Country</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="choose_area">Choose  Area</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="items">Items</string>
    <string name="voucher">Voucher</string>
    <string name="bankcard">Bank Card</string>
    <string name="mobile_Money">Mobile Money</string>

</resources>